flickering fix (to be improved)

--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -36,6 +36,7 @@
   position: absolute;
   top: 20px;
   left: 40px;
+  transition-delay: 300ms;
 }
 
 #sea-angel:hover + #fanni-angel {
